webkit (1.8.1-2) UNRELEASED; urgency=low

  [ Michael Biebl ]
  * debian/rules:
  - Use set -e in for loops to fail early

  [ Jeremy Bicha ]
  * debian/rules:
  - Remove duplicate LDFLAGS when running configure
  * debian/watch:
  - Look for tar.xz files from now on

 -- Gustavo Noronha Silva <kov@debian.org>  Fri, 04 May 2012 12:37:56 -0300

webkit (1.8.1-1) unstable; urgency=low

  * New upstream release
  * debian/patches/10_kfreebsd_support.patch:
  - Patch by Steven Chamberlain <steven@pyro.eu.org> to fix the
    build for kFreeBSD (Closes: #669308)

 -- Gustavo Noronha Silva <kov@debian.org>  Thu, 26 Apr 2012 19:52:12 -0300

webkit (1.8.0-2) unstable; urgency=low

  * Upload to unstable

 -- Gustavo Noronha Silva <kov@debian.org>  Tue, 03 Apr 2012 16:50:54 -0300

webkit (1.8.0-1) experimental; urgency=low

  * New stable release
  * debian/control:
  - move libwebkit-dev to oldlibs
  * debian/*.symbols:
  - updated with symbols additions

 -- Gustavo Noronha Silva <kov@debian.org>  Wed, 28 Mar 2012 09:53:38 -0300

webkit (1.7.92-1) experimental; urgency=low

  * New development release
  * debian/control:
  - wrapped Build-Dependencies
  * debian/rules:
  - pass --no-keep-memory to the linker, to make build less likely
    to fail with an OOM
  * debian/*.symbols:
  - updated with new symbols

 -- Gustavo Noronha Silva <kov@debian.org>  Mon, 26 Mar 2012 19:56:51 -0300

webkit (1.7.91-1) experimental; urgency=low

  * New development release
  * debian/patches/05_sparc-needs-alignment.patch:
  - removed; applied upstream
  * debian/libwebkitgtk*.symbols:
  - added DRT optional symbols that are different on i386/powerpc
  * debian/control:
  - replace dh_clean -k call with dh_prep
  - bump Build-Depends on debhelper, for dh_prep
  - bump Dependency on libsoup to for the -dev packages to match the
    Build-Dependency
  - Recommend gstreamer packages required to play most formats
    with <video> and <audio>
  * debian/rules: